--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ asgiref==3.7.2
 black==23.9.1
 click==8.1.7
 Django==4.2.5
-dotenv==0.0.5
 flake8==6.1.0
 mccabe==0.7.0
 mypy-extensions==1.0.0
@@ -11,6 +10,7 @@ pathspec==0.11.2
 platformdirs==3.10.0
 pycodestyle==2.11.0
 pyflakes==3.1.0
+python-dotenv==1.0.0
 sqlparse==0.4.4
 tomli==2.0.1
 typing_extensions==4.8.0
