--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,29 @@
 asgiref==3.7.2
 black==23.9.1
 click==8.1.7
+coverage==7.3.1
 Django==4.2.5
+exceptiongroup==1.1.3
+factory-boy==3.3.0
+Faker==19.6.2
 flake8==6.1.0
+inflection==0.5.1
+iniconfig==2.0.0
 mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==23.1
 pathspec==0.11.2
 platformdirs==3.10.0
+pluggy==1.3.0
 pycodestyle==2.11.0
 pyflakes==3.1.0
+pytest==7.4.2
+pytest-cov==4.1.0
+pytest-django==4.5.2
+pytest-factoryboy==2.5.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+six==1.16.0
 sqlparse==0.4.4
 tomli==2.0.1
 typing_extensions==4.8.0
